--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
         }
 
         .container {
-            max-width: 95vw;
+            max-width: 500px;
             width: auto;
             padding: 20px;
             background-color: #ffffff;
