--- a/templates/index.html
+++ b/templates/index.html
@@ -307,7 +307,7 @@
             </div>
         </div>
 
-        <!-- Upload Iqama Audio Modal -->
+        <!-- Upload Iqama Audio Modal 
         <div class="modal fade" id="uploadIqamaModal" tabindex="-1" aria-labelledby="uploadIqamaModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -331,7 +331,7 @@
                 </div>
             </div>
         </div>
-
+-->
 
     <!-- System Controls Section -->
     <div class="system-controls">
