--- a/templates/index.html
+++ b/templates/index.html
@@ -48,12 +48,11 @@
 
         .container {
             max-width: 500px;
-            width: auto;
+            width: 100%;
             padding: 20px;
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 0 auto;
         }
 
         .prayer-times,
@@ -171,8 +170,8 @@
             min-width: 150px; /* Ensures buttons are the same width */
             flex: 1; /* Allows buttons to grow and shrink equally */
         }
-        
     </style>
+    
 </head>
 
 <body>
