--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,12 @@
 
         .container {
             max-width: 500px;
-            width: 100%;
+            width: auto;
             padding: 20px;
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 0 auto;
         }
 
         .prayer-times,
@@ -113,6 +114,10 @@
             border-radius: 8px;
         }
 
+        body, html {
+            overflow-x: hidden;
+        }
+
         .volume-control {
             display: flex;
             align-items: center;
@@ -170,6 +175,7 @@
             min-width: 150px; /* Ensures buttons are the same width */
             flex: 1; /* Allows buttons to grow and shrink equally */
         }
+        
     </style>
     
 </head>
