--- a/templates/index.html
+++ b/templates/index.html
@@ -488,6 +488,37 @@
     </div>
 </div>
 
+<!-- Mosque Selection Modal -->
+<div class="modal fade" id="mosqueModal" tabindex="-1" role="dialog" aria-labelledby="mosqueModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="mosqueModalLabel">Enter Mosque URL</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="mosqueForm">
+                    <div class="form-group">
+                        <label for="mosqueSelect">Select a Mosque</label>
+                        <select id="mosqueSelect" class="form-control selectpicker" data-live-search="true">
+                            <option value="" disabled selected hidden>Select from the list</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="mosqueUrl">Or Enter Mosque URL</label>
+                        <input type="text" class="form-control" id="mosqueUrl" placeholder="https://mawaqit.net/en/m/mosque-name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="saveMosqueUrl">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- JavaScript -->
 
